--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Meyer & Söhne Immobilien
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,10 +9,19 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Willkommen2</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-  <p>Mein Text im Tab 1, unformatiert</p>
+  <div class="home-container">
+    <div class="logo">
+      <img src="./../../assets/start.webp" alt="">
+    </div>
+    <div class="welcome-text">
+      <p> Schön, dass Sie da sind!</p> 
+      <p>Sind Sie auf der Suche nach einer Wohnung, Gewerbefläche oder einem Parkplatz in Frankfurt? Mit einem Klick auf <span class="bold">Angebote</span> in der Navigationsleiste unten finden Sie schnell und unkompliziert eine Übersicht unserer aktuell verfügbaren Immobilien.</p> 
+      <p> Möchten Sie eine Immobilie oder einen Anteil daran verkaufen? Dann werfen Sie doch einen Blick auf unser Anforderungsprofil unter <span class="bold">"WIR SUCHEN"</span> – wir freuen uns auf Ihre Kontaktaufnahme!</p>   
+    </div>
+  </div>
+  
 </ion-content>
