--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Aktuelle Angebote
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,19 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Aktuelle Angebote</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <iframe 
+  src="https://www.immobilienscout24.de/anbieter/profil/meyer-und-soehne-i-egbr" 
+  width="100%" 
+  height="100%" 
+  style="border: 0;" 
+  allowfullscreen="" 
+  loading="lazy">
+</iframe>
+
+
+
 </ion-content>
