--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,10 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+:root {
+    --ion-background-color: #ffffff;
+    --ion-text-color: #000000; 
+  }
+  
+  span.bold {
+    font-weight: bold;
+  }
